<resources>
    <string name="app_name">My Office</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_account">Akun</string>
    <string name="absen_in">Absen Masuk</string>
    <string name="absen_out">Absen Keluar</string>
    <string name="absen_history">Riwayat Absensi</string>
    <string name="pengajuan_cuti">Riwayat Pengajuan Cuti</string>
    <string name="form_pengajuan_cuti">Form Pengajuan Cuti</string>
    <string name="form_kesehatan">Form Kesehatan</string>
    <string name="data_cuti">Data Cuti</string>
    <string name="kesehatan">Riwayat Kesehatan</string>
    <string name="riwayat_kesehatan">Menampilkan riwayat dan form kesehatan</string>
    <string name="list_data_cuti">Menampilkan data cuti</string>
    <string name="riwayat_pengajuan_cuti">Menampilkan riwayat dan form pengajuan cuti</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="nama_pegawai">Nama pegawai</string>
    <string name="jabatan_pegawai">Jabatan pegawai</string>
    <string name="kode_pegawai">Kode pegawai</string>
    <string name="tentang">Tentang</string>
    <string name="akun">Akun Saya</string>
    <string name="tab_pengajuan_cuti">Pengajuan Cuti</string>
    <string name="tab_kesehatan">Kesehatan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="keluar">KELUAR</string>
    <string name="jam_masuk">Jam masuk</string>
    <string name="jam_keluar">Jam keluar</string>
    <string name="halaman_login">Halaman Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="my_office_2021">My Office 2021</string>
    <string name="rey">Reynaldi Prama Octavially</string>
    <string name="elsa">Elsa Jelista Sari</string>
    <string name="nur">Nur Apriyanto</string>
    <string name="abel">Alifia Belqis</string>
    <string name="alasan_pengajuan_cuti">Alasan pengajuan cuti</string>
    <string name="tanggal_mulai_cuti">Tanggal mulai cuti</string>
    <string name="tanggal_selesai_cuti">Tanggal selesai cuti</string>
    <string name="ajukan_cuti">Ajukan cuti</string>
    <string name="negatif">Negatif</string>
    <string name="sudah">Sudah</string>
    <string name="belum">Belum</string>
    <string name="positif">Positif</string>
    <string name="jenis_pekerjaan">Jenis pekerjaan</string>
    <string name="suhu_tubuh">Suhu tubuh</string>
    <string name="swab_14_hari_terakhir">Swab 14 hari terakhir</string>
    <string name="status_vaksinasi">Status vaksinasi</string>
    <string name="simpan">Simpan</string>
    <string name="tanggal_mulai">Tanggal mulai</string>
    <string name="tanggal_selesai">Tanggal selesai</string>
    <string name="temukan_kami">Temukan Kami</string>
</resources>