<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.reyoctavially.myoffice.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="org.reyoctavially.myoffice.fragment.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="org.reyoctavially.myoffice.fragment.AccountFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_account" />

</navigation>