<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FormKesehatanActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <ImageView
                android:id="@+id/iv_form_kesehatan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_favorite_danger_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_suhu_tubuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="5"
                android:hint="@string/suhu_tubuh"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/rg_pekerjaan" />

            <RadioGroup
                android:id="@+id/rg_swab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/et_suhu_tubuh">

                <RadioButton
                    android:id="@+id/rb_swab_negatif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/negatif" />

                <RadioButton
                    android:id="@+id/rb_swab_positif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positif" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_vaksinasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/rg_swab"
                app:layout_constraintStart_toStartOf="@+id/rg_swab"
                app:layout_constraintTop_toBottomOf="@+id/rg_swab">

                <RadioButton
                    android:id="@+id/rb_vaksinasi_belum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/belum" />

                <RadioButton
                    android:id="@+id/rb_vaksinasi_sudah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudah" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_form_jenis_pekerjaan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/jenis_pekerjaan"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rg_pekerjaan" />

            <TextView
                android:id="@+id/tv_form_suhu_tubuh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/suhu_tubuh"
                app:layout_constraintBottom_toBottomOf="@+id/et_suhu_tubuh"
                app:layout_constraintTop_toTopOf="@+id/et_suhu_tubuh"
                app:layout_constraintEnd_toEndOf="@+id/tv_form_jenis_pekerjaan"
                app:layout_constraintStart_toStartOf="@+id/tv_form_jenis_pekerjaan"
                tools:layout_editor_absoluteY="141dp" />

            <TextView
                android:id="@+id/tv_form_swab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/swab_14_hari_terakhir"
                app:layout_constraintBottom_toBottomOf="@+id/rg_swab"
                app:layout_constraintTop_toTopOf="@+id/rg_swab"
                app:layout_constraintEnd_toEndOf="@+id/tv_form_suhu_tubuh"
                app:layout_constraintStart_toStartOf="@+id/tv_form_suhu_tubuh"
                tools:layout_editor_absoluteY="173dp" />

            <TextView
                android:id="@+id/tv_form_vaksinasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status_vaksinasi"
                app:layout_constraintBottom_toBottomOf="@+id/rg_vaksinasi"
                app:layout_constraintTop_toTopOf="@+id/rg_vaksinasi"
                app:layout_constraintEnd_toEndOf="@+id/tv_form_swab"
                app:layout_constraintStart_toStartOf="@+id/tv_form_swab"
                tools:layout_editor_absoluteY="237dp" />

            <Button
                android:id="@+id/btn_kesehatan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/simpan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_vaksinasi" />

            <ProgressBar
                android:id="@+id/progressBar_kesehatan"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/et_suhu_tubuh"
                app:layout_constraintStart_toEndOf="@+id/et_suhu_tubuh"
                app:layout_constraintTop_toTopOf="@+id/et_suhu_tubuh" />

            <RadioGroup
                android:id="@+id/rg_pekerjaan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/iv_form_kesehatan">

                <RadioButton
                    android:id="@+id/rb_pekerjaan_wfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Work from office" />

                <RadioButton
                    android:id="@+id/rb_pekerjaan_wfh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Work from home" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>