<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FormPengajuanCutiActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <EditText
                android:id="@+id/et_alasan_pengajuan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/alasan_pengajuan_cuti"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/iv_pengajuan" />

            <EditText
                android:id="@+id/et_tgl_mulai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:hint="@string/tanggal_mulai_cuti"
                android:inputType="date"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/et_alasan_pengajuan"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/et_alasan_pengajuan" />

            <EditText
                android:id="@+id/et_tgl_selesai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:hint="@string/tanggal_selesai_cuti"
                android:inputType="date"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/et_tgl_mulai"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/et_tgl_mulai" />

            <Button
                android:id="@+id/btn_pengajuan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ajukan_cuti"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_tgl_selesai" />

            <ImageView
                android:id="@+id/iv_pengajuan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_travel_info_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_alasan_pengajuan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/alasan_pengajuan_cuti"
                app:layout_constraintBottom_toBottomOf="@+id/et_alasan_pengajuan"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_alasan_pengajuan" />

            <TextView
                android:id="@+id/tv_tgl_mulai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_mulai"
                app:layout_constraintBottom_toBottomOf="@+id/et_tgl_mulai"
                app:layout_constraintEnd_toEndOf="@+id/tv_alasan_pengajuan"
                app:layout_constraintStart_toStartOf="@+id/tv_alasan_pengajuan"
                app:layout_constraintTop_toTopOf="@+id/et_tgl_mulai" />

            <TextView
                android:id="@+id/tv_tgl_selesai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_selesai"
                app:layout_constraintBottom_toBottomOf="@+id/et_tgl_selesai"
                app:layout_constraintEnd_toEndOf="@+id/tv_tgl_mulai"
                app:layout_constraintStart_toStartOf="@+id/tv_tgl_mulai"
                app:layout_constraintTop_toTopOf="@+id/et_tgl_selesai" />

            <ProgressBar
                android:id="@+id/progressBar_pengajuan"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>